src/qnn_wrapper.h

// 定义状态码，和 C++ 中 sample_app::StatusCode 保持一致
typedef enum {
    QNN_STATUS_SUCCESS = 0,
    QNN_STATUS_FAILURE,
    QNN_STATUS_FAILURE_INPUT_LIST_EXHAUSTED,
    QNN_STATUS_FAILURE_SYSTEM_ERROR,
    QNN_STATUS_FAILURE_SYSTEM_COMMUNICATION_ERROR,
    QNN_STATUS_FEATURE_UNSUPPORTED
} QnnStatus;
// 定义输出数据类型
typedef enum {
    QNN_OUTPUT_DATA_TYPE_FLOAT_ONLY = 0,
    QNN_OUTPUT_DATA_TYPE_NATIVE_ONLY,
    QNN_OUTPUT_DATA_TYPE_FLOAT_AND_NATIVE,
    QNN_OUTPUT_DATA_TYPE_INVALID
} QnnOutputDataType;
// 定义输入数据类型
typedef enum {
    QNN_INPUT_DATA_TYPE_FLOAT = 0,
    QNN_INPUT_DATA_TYPE_NATIVE,
    QNN_INPUT_DATA_TYPE_INVALID
} QnnInputDataType;
// 定义HTP精度模式
typedef enum {
    QNN_HTP_PRECISION_MODE_FLOAT32 = 0,
    QNN_HTP_PRECISION_MODE_FLOAT16 = 1,
    QNN_HTP_PRECISION_MODE_DEFAULT = 0x7FFFFFFF
} QnnHtpPrecisionMode;
// 定义HTP后端配置结构体
typedef struct {
    int optimizationLevel;      // 优化级别(0-3)，3为最佳性能
    QnnHtpPrecisionMode precisionMode;  // 精度模式
} QnnBackendHtpConfig;
// 不透明指针类型，用户只能通过接口操作
typedef struct QnnSampleApp QnnSampleApp;
// 定义异步回调函数类型
typedef void (*QnnAsyncCallback)(QnnStatus status, void* userData);
// 结果回调，用于带返回数据的异步函数
typedef void (*QnnFloatOutputCallback)(QnnStatus status, float** outputs, size_t* sizes, size_t numOutputs, void* userData);
typedef void (*QnnStringCallback)(QnnStatus status, const char* result, void* userData);
typedef void (*QnnArchVersionCallback)(int version, void* userData);
// 异步函数声明
void qnn_sample_app_create_async(const char* backendPath, 
                              const char* modelPath, 
                              QnnOutputDataType outputDataType, 
                              QnnInputDataType inputDataType, 
                              const char* dataDir,
                              void (*callback)(QnnSampleApp* app, void* userData),
                              void* userData);
void qnn_sample_app_free_context_async(QnnSampleApp* app, QnnAsyncCallback callback, void* userData);
void qnn_sample_app_terminate_backend_async(QnnSampleApp* app, QnnAsyncCallback callback, void* userData);
void qnn_sample_app_free_graphs_async(QnnSampleApp* app, QnnAsyncCallback callback, void* userData);
void qnn_sample_app_get_backend_build_id_async(QnnSampleApp* app, QnnStringCallback callback, void* userData);
void qnn_sample_app_is_device_property_supported_async(QnnSampleApp* app, QnnAsyncCallback callback, void* userData);
void qnn_sample_app_create_device_async(QnnSampleApp* app, QnnAsyncCallback callback, void* userData);
void qnn_sample_app_free_device_async(QnnSampleApp* app, QnnAsyncCallback callback, void* userData);
void qnn_sample_app_load_float_inputs_async(QnnSampleApp* app, const float** inputs, const size_t* sizes, size_t numInputs, int graphIdx, QnnAsyncCallback callback, void* userData);
void qnn_sample_app_get_float_outputs_async(QnnSampleApp* app, int graphIdx, QnnFloatOutputCallback callback, void* userData);
void qnn_get_htp_arch_version_async(const char* backendPath, QnnArchVersionCallback callback, void* userData);