lib/qnn_wrapper_bindings_generated.dart


  late final _qnn_sample_app_free_context_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<QnnSampleApp>,
        QnnAsyncCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_free_context_async');
  late final _qnn_sample_app_free_context_async =
      _qnn_sample_app_free_context_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<QnnSampleApp>,
              QnnAsyncCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_sample_app_terminate_backend_async(
    ffi.Pointer<QnnSampleApp> app,
    QnnAsyncCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_terminate_backend_async(app, callback, userData);
  }

  late final _qnn_sample_app_terminate_backend_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<QnnSampleApp>,
        QnnAsyncCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_terminate_backend_async');
  late final _qnn_sample_app_terminate_backend_async =
      _qnn_sample_app_terminate_backend_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<QnnSampleApp>,
              QnnAsyncCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_sample_app_free_graphs_async(
    ffi.Pointer<QnnSampleApp> app,
    QnnAsyncCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_free_graphs_async(app, callback, userData);
  }

  late final _qnn_sample_app_free_graphs_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<QnnSampleApp>,
        QnnAsyncCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_free_graphs_async');
  late final _qnn_sample_app_free_graphs_async =
      _qnn_sample_app_free_graphs_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<QnnSampleApp>,
              QnnAsyncCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_sample_app_get_backend_build_id_async(
    ffi.Pointer<QnnSampleApp> app,
    QnnStringCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_get_backend_build_id_async(app, callback, userData);
  }

  late final _qnn_sample_app_get_backend_build_id_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<QnnSampleApp>,
        QnnStringCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_get_backend_build_id_async');
  late final _qnn_sample_app_get_backend_build_id_async =
      _qnn_sample_app_get_backend_build_id_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<QnnSampleApp>,
              QnnStringCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_sample_app_is_device_property_supported_async(
    ffi.Pointer<QnnSampleApp> app,
    QnnAsyncCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_is_device_property_supported_async(
      app,
      callback,
      userData,
    );
  }

  late final _qnn_sample_app_is_device_property_supported_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<QnnSampleApp>,
        QnnAsyncCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_is_device_property_supported_async');
  late final _qnn_sample_app_is_device_property_supported_async =
      _qnn_sample_app_is_device_property_supported_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<QnnSampleApp>,
              QnnAsyncCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_sample_app_create_device_async(
    ffi.Pointer<QnnSampleApp> app,
    QnnAsyncCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_create_device_async(app, callback, userData);
  }

  late final _qnn_sample_app_create_device_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<QnnSampleApp>,
        QnnAsyncCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_create_device_async');
  late final _qnn_sample_app_create_device_async =
      _qnn_sample_app_create_device_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<QnnSampleApp>,
              QnnAsyncCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_sample_app_free_device_async(
    ffi.Pointer<QnnSampleApp> app,
    QnnAsyncCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_free_device_async(app, callback, userData);
  }

  late final _qnn_sample_app_free_device_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<QnnSampleApp>,
        QnnAsyncCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_free_device_async');
  late final _qnn_sample_app_free_device_async =
      _qnn_sample_app_free_device_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<QnnSampleApp>,
              QnnAsyncCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_sample_app_load_float_inputs_async(
    ffi.Pointer<QnnSampleApp> app,
    ffi.Pointer<ffi.Pointer<ffi.Float>> inputs,
    ffi.Pointer<ffi.Size> sizes,
    int numInputs,
    int graphIdx,
    QnnAsyncCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_load_float_inputs_async(
      app,
      inputs,
      sizes,
      numInputs,
      graphIdx,
      callback,
      userData,
    );
  }

  late final _qnn_sample_app_load_float_inputs_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<QnnSampleApp>,
        ffi.Pointer<ffi.Pointer<ffi.Float>>,
        ffi.Pointer<ffi.Size>,
        ffi.Size,
        ffi.Int,
        QnnAsyncCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_load_float_inputs_async');
  late final _qnn_sample_app_load_float_inputs_async =
      _qnn_sample_app_load_float_inputs_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<QnnSampleApp>,
              ffi.Pointer<ffi.Pointer<ffi.Float>>,
              ffi.Pointer<ffi.Size>,
              int,
              int,
              QnnAsyncCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_sample_app_get_float_outputs_async(
    ffi.Pointer<QnnSampleApp> app,
    int graphIdx,
    QnnFloatOutputCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_sample_app_get_float_outputs_async(
      app,
      graphIdx,
      callback,
      userData,
    );
  }

  late final _qnn_sample_app_get_float_outputs_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<QnnSampleApp>,
        ffi.Int,
        QnnFloatOutputCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_sample_app_get_float_outputs_async');
  late final _qnn_sample_app_get_float_outputs_async =
      _qnn_sample_app_get_float_outputs_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<QnnSampleApp>,
              int,
              QnnFloatOutputCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  void qnn_get_htp_arch_version_async(
    ffi.Pointer<ffi.Char> backendPath,
    QnnArchVersionCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _qnn_get_htp_arch_version_async(backendPath, callback, userData);
  }

  late final _qnn_get_htp_arch_version_asyncPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        QnnArchVersionCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('qnn_get_htp_arch_version_async');
  late final _qnn_get_htp_arch_version_async =
      _qnn_get_htp_arch_version_asyncPtr
          .asFunction<
            void Function(
              ffi.Pointer<ffi.Char>,
              QnnArchVersionCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();
}

/// 定义状态码，和 C++ 中 sample_app::StatusCode 保持一致
enum QnnStatus {
  QNN_STATUS_SUCCESS(0),
  QNN_STATUS_FAILURE(1),
  QNN_STATUS_FAILURE_INPUT_LIST_EXHAUSTED(2),
  QNN_STATUS_FAILURE_SYSTEM_ERROR(3),
  QNN_STATUS_FAILURE_SYSTEM_COMMUNICATION_ERROR(4),
  QNN_STATUS_FEATURE_UNSUPPORTED(5);

  final int value;
  const QnnStatus(this.value);

  static QnnStatus fromValue(int value) => switch (value) {
    0 => QNN_STATUS_SUCCESS,
    1 => QNN_STATUS_FAILURE,
    2 => QNN_STATUS_FAILURE_INPUT_LIST_EXHAUSTED,
    3 => QNN_STATUS_FAILURE_SYSTEM_ERROR,
    4 => QNN_STATUS_FAILURE_SYSTEM_COMMUNICATION_ERROR,
    5 => QNN_STATUS_FEATURE_UNSUPPORTED,
    _ => throw ArgumentError("Unknown value for QnnStatus: $value"),
  };
}

/// 定义输出数据类型
enum QnnOutputDataType {
  QNN_OUTPUT_DATA_TYPE_FLOAT_ONLY(0),
  QNN_OUTPUT_DATA_TYPE_NATIVE_ONLY(1),
  QNN_OUTPUT_DATA_TYPE_FLOAT_AND_NATIVE(2),
  QNN_OUTPUT_DATA_TYPE_INVALID(3);

  final int value;
  const QnnOutputDataType(this.value);

  static QnnOutputDataType fromValue(int value) => switch (value) {
    0 => QNN_OUTPUT_DATA_TYPE_FLOAT_ONLY,
    1 => QNN_OUTPUT_DATA_TYPE_NATIVE_ONLY,
    2 => QNN_OUTPUT_DATA_TYPE_FLOAT_AND_NATIVE,
    3 => QNN_OUTPUT_DATA_TYPE_INVALID,
    _ => throw ArgumentError("Unknown value for QnnOutputDataType: $value"),
  };
}

/// 定义输入数据类型
enum QnnInputDataType {
  QNN_INPUT_DATA_TYPE_FLOAT(0),
  QNN_INPUT_DATA_TYPE_NATIVE(1),
  QNN_INPUT_DATA_TYPE_INVALID(2);

  final int value;
  const QnnInputDataType(this.value);

  static QnnInputDataType fromValue(int value) => switch (value) {
    0 => QNN_INPUT_DATA_TYPE_FLOAT,
    1 => QNN_INPUT_DATA_TYPE_NATIVE,
    2 => QNN_INPUT_DATA_TYPE_INVALID,
    _ => throw ArgumentError("Unknown value for QnnInputDataType: $value"),
  };
}

/// 定义HTP精度模式
enum QnnHtpPrecisionMode {
  QNN_HTP_PRECISION_MODE_FLOAT32(0),
  QNN_HTP_PRECISION_MODE_FLOAT16(1),
  QNN_HTP_PRECISION_MODE_DEFAULT(2147483647);

  final int value;
  const QnnHtpPrecisionMode(this.value);

  static QnnHtpPrecisionMode fromValue(int value) => switch (value) {
    0 => QNN_HTP_PRECISION_MODE_FLOAT32,
    1 => QNN_HTP_PRECISION_MODE_FLOAT16,
    2147483647 => QNN_HTP_PRECISION_MODE_DEFAULT,
    _ => throw ArgumentError("Unknown value for QnnHtpPrecisionMode: $value"),
  };
}

/// 定义HTP后端配置结构体
final class QnnBackendHtpConfig extends ffi.Struct {
  /// 优化级别(0-3)，3为最佳性能
  @ffi.Int()
  external int optimizationLevel;

  /// 精度模式
  @ffi.UnsignedInt()
  external int precisionMode;
}

final class QnnSampleApp extends ffi.Opaque {}

/// 定义异步回调函数类型
typedef QnnAsyncCallback =
    ffi.Pointer<ffi.NativeFunction<QnnAsyncCallbackFunction>>;
typedef QnnAsyncCallbackFunction =
    ffi.Void Function(ffi.UnsignedInt status, ffi.Pointer<ffi.Void> userData);
typedef DartQnnAsyncCallbackFunction =
    void Function(QnnStatus status, ffi.Pointer<ffi.Void> userData);
typedef QnnStringCallback =
    ffi.Pointer<ffi.NativeFunction<QnnStringCallbackFunction>>;
typedef QnnStringCallbackFunction =
    ffi.Void Function(
      ffi.UnsignedInt status,
      ffi.Pointer<ffi.Char> result,
      ffi.Pointer<ffi.Void> userData,
    );
typedef DartQnnStringCallbackFunction =
    void Function(
      QnnStatus status,
      ffi.Pointer<ffi.Char> result,
      ffi.Pointer<ffi.Void> userData,
    );
